...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="reJ-TK-Peh">
                                <rect key="frame" x="66.666666666666686" y="755.66666666666663" width="260" height="54.333333333333371"/>
                                <color key="tintColor" systemColor="systemGreenColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Let's Cook!">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="20"/>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="30"/>
                                    </userDefinedRuntimeAttribute>
...
                            <constraint firstItem="III-xc-w2k" firstAttribute="bottom" secondItem="RkZ-Fa-fFz" secondAttribute="bottom" id="VdN-IV-BHQ"/>
                            <constraint firstItem="RkZ-Fa-fFz" firstAttribute="trailing" secondItem="III-xc-w2k" secondAttribute="trailing" constant="20" id="YgR-tR-F3e"/>
                            <constraint firstItem="III-xc-w2k" firstAttribute="top" secondItem="RkZ-Fa-fFz" secondAttribute="top" constant="60" id="bov-o1-bpF"/>
                            <constraint firstItem="RkZ-Fa-fFz" firstAttribute="trailing" secondItem="HBY-rA-PA2" secondAttribute="trailing" constant="9" id="zvG-vj-p3o"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Food Recipe" style="editor" id="H6O-3Y-0wc"/>
                    <connections>
                        <outlet property="collectionView" destination="III-xc-w2k" id="Sac-s9-sqX"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ZdD-Mw-xwp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
