...
                            <constraint firstItem="s4l-rQ-9e5" firstAttribute="trailing" secondItem="GHh-v9-loB" secondAttribute="trailing" id="aEB-IB-mkV"/>
                            <constraint firstItem="xCE-Ob-Goc" firstAttribute="top" secondItem="s4l-rQ-9e5" secondAttribute="bottom" id="axV-Fr-Y3w"/>
                            <constraint firstItem="xCE-Ob-Goc" firstAttribute="top" secondItem="s4l-rQ-9e5" secondAttribute="bottom" id="bcQ-Zd-a49"/>
                            <constraint firstItem="s4l-rQ-9e5" firstAttribute="leading" secondItem="GHh-v9-loB" secondAttribute="leading" id="oW2-a6-fH7"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Recipe List" id="rCT-Kb-21A"/>
                    <connections>
                        <outlet property="searchBar" destination="s4l-rQ-9e5" id="GF5-EF-WgK"/>
                        <outlet property="tableView" destination="xCE-Ob-Goc" id="DZD-xV-1qJ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="mbr-lW-Z7I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
